<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LinearLayoutMondai</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="tv_title">お申し込みフォーム</string>
    <string name="tv_name">お名前：</string>
    <string name="tv_address">住所：</string>
    <string name="tv_birthday">生年月日：</string>
    <string name="tv_month">月</string>
    <string name="tv_day">日</string>
    <string name="tv_gender">性別：</string>
    <string name="tv_male">男</string>
    <string name="tv_female">女</string>
    <string name="tv_item">希望商品</string>
    <string name="tv_number">注文数量</string>
    <string name="tv_apple">りんご</string>
    <string name="tv_orange">みかん</string>
    <string name="tv_peach">もも</string>
    <string name="bt_send">送信</string>

    <string-array name="month">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="day">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

</resources>
