<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_title"
        android:textSize="24.0sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_name" />
        <EditText
            android:id="@+id/et_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_address" />
        <EditText
            android:id="@+id/et_address"
            android:layout_width="200dp"

            android:layout_height="wrap_content"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_birthday" />
        <Spinner
            android:id="@+id/sp_month"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:entries="@array/month" />
        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_month" />
        <Spinner
            android:id="@+id/sp_day"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:entries="@array/day" />
        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_day" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/tv_gender" />
        <RadioGroup
            android:id="@+id/rg_gender"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <RadioButton
                android:id="@+id/rb_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_male" />
            <RadioButton
                android:id="@+id/rb_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_female" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:orientation="horizontal"
        android:background="#003399" >
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_item"
            android:textColor="#FFFFFF" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_number"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:orientation="horizontal" >
        <CheckBox
            android:id="@+id/cb_apple"
            android:layout_width="160dp"

            android:layout_height="wrap_content"
            android:text="@string/tv_apple" />
        <EditText
            android:id="@+id/et_apple"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:orientation="horizontal" >
        <CheckBox
            android:id="@+id/cb_orange"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_orange" />
        <EditText
            android:id="@+id/et_orange"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:orientation="horizontal" >
        <CheckBox
            android:id="@+id/cb_peach"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_peach" />
        <EditText
            android:id="@+id/et_peach"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </LinearLayout>

    <Button
            android:id="@+id/bt_send"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/bt_send" />

</LinearLayout>
